--- a/produk.html
+++ b/produk.html
@@ -48,6 +48,16 @@
                                     <span class="section-heading-lower">MIE KENSARI</span>
                                 </h2>
                                 <p>Di bawah ini anda bisa melihat produk mie dan pangsit kami. Selain produk di bawah ini, anda juga bisa memesan mie dan kulit pangsit dengan resep sesuai pesanan anda.</p>
+                                <p><b>Penting!</b>
+									<ul>
+										<li>Bentuk dan ukuran mie bisa dibentuk sesuai permintaan (besar/kecil).</li>
+										<li>1 kg mie bisa untuk 10-12 porsi mie ayam.</li>
+										<li>Mie yang kami jual dalam bentuk kiloan, tidak berbentuk gulungan kecil.</li>
+										<li>Pangsit masih dalam bentuk lembaran panjang, tidak dipotong kecil-kecil.</li>
+										<li>Bagi pelanggan yg minta diantar dikenakan biaya transport. Besarnya biaya menyesuaikan jarak.</li>
+										<li>Semua mie mentah dan kulit pangsit dibuat sesuai pesanan (made by order) tidak ready stock. Pesanlah satu hari sebelumnya.</li>
+									</ul>                                
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -57,7 +67,7 @@
 
         <!-- Section-->
         <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
+            <div class="container px-4 px-lg-5 mt-1">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
                         <div class="card h-100">
