--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <span class="section-heading-upper">Selamat Datang Di</span>
                             <span class="section-heading-lower">Mie Kensari</span>
                         </h2>
-                        <p class="mb-3">Kami merupakan supplier pilihan bagi pedagang mie ayam & olahan kulit pangsit. Menyediakan mie segar & kulit pangsit mentah. Semua dibuat dari bahan alami pilihan tanpa pengawet, pengenyal & bahan kimia berbahaya</p>
+                        <p class="mb-3">Kami merupakan supplier pilihan bagi pedagang mie ayam & olahan kulit pangsit. Menyediakan mie segar & kulit pangsit mentah. Semua dibuat dari bahan alami pilihan tanpa pengawet & bahan kimia berbahaya.</p>
                         <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="produk.html">Lihat Produk!</a></div>
                     </div>
                 </div>
